Fix z-index on tablet viewport

--- a/dev/stylesheets/zindex.styl
+++ b/dev/stylesheets/zindex.styl
@@ -19,7 +19,8 @@
 
 // 5
 .section--00
-  z-index 5
+  @media screen and (min-width $laptop('min-width'))
+    z-index 5
 
 
 // 4
